--- a/web-store/src/layout/styles/_variables.scss
+++ b/web-store/src/layout/styles/_variables.scss
@@ -1,4 +1,4 @@
-$mainThemeColor: #f15068;
+$mainThemeColor: #d63950;
 $mainTextColor: #222222;
-$mainTextColorP: #898989;
+$mainTextColorP: #6f6e6e;
 $font: 'Lato', sans-serif;
