--- a/web-store/src/layout/styles/styles.scss
+++ b/web-store/src/layout/styles/styles.scss
@@ -68,7 +68,7 @@ body {
 
 .offer {
   img {
-    max-width: 560px;
+    width: 100%;
     object-position: center center;
     object-fit: cover;
   }
