--- a/web-store/src/layout/styles/styles.scss
+++ b/web-store/src/layout/styles/styles.scss
@@ -1,5 +1,6 @@
 @import "variables";
 @import "header";
+@import "v-components";
 @import "footer";
 @import "media/mediaSM";
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
